opam-version: "2.0"
name: "oseq"
version: "0.2"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
license: "BSD-2-clauses"
build: [
  ["dune" "build" "-p" name]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build}
  "qcheck" {test}
  "qtest" {test}
  "gen" {test}
  "containers" {test}
  "odoc" {doc}
  "seq"
]
tags: [ "sequence" "iterator" "seq" "pure" "list" ]
homepage: "https://github.com/c-cube/oseq/"
doc: "https://c-cube.github.io/oseq/"
bug-reports: "https://github.com/c-cube/oseq/issues"
dev-repo: "git+https://github.com/c-cube/oseq.git"

