opam-version: "2.0"
name: "oseq"
version: "0.3"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
license: "BSD-2-clauses"
build: [
  ["dune" "build" "-p" name]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "1.0" }
  "qcheck" {with-test}
  "qtest" {with-test}
  "gen" {with-test}
  "containers" {with-test}
  "odoc" {with-doc}
  "seq"
  "ocaml" { >= "4.03.0" }
]
tags: [ "sequence" "iterator" "seq" "pure" "list" ]
homepage: "https://github.com/c-cube/oseq/"
doc: "https://c-cube.github.io/oseq/"
bug-reports: "https://github.com/c-cube/oseq/issues"
dev-repo: "git+https://github.com/c-cube/oseq.git"
synopsis: "Simple list of suspensions, as a composable lazy iterator that behaves like a value"
description: "Extends the new standard library's `Seq` module with many useful combinators."
