
(executable
  (name make)
  (flags :standard -warn-error -a)
  (modules make))

(rule
  (targets run_qtest.ml)
  (deps make.bc (source_tree ../src))
  (action
    (with-stdout-to %{targets}
       (run ./make.bc))))

(executable
  (name run_qtest)
  (modes native)
  (modules run_qtest)
  ; disable some warnings in qtests
  (flags :standard -warn-error -a+8 -w -3-33-35-27-39-50)
  (libraries oseq containers qcheck))

(alias
  (name runtest)
  (locks ctest)
  (package oseq)
  (action (run ./run_qtest.exe)))
