(rule
  (targets flambda.flags)
  (deps (file mkflags.ml))
  (mode fallback)
  (action (run ocaml ./mkflags.ml)))

(library
  (name oseq)
  (public_name oseq)
  (wrapped false)
  (modules OSeq OSeq_shims_)
  (flags :standard -safe-string -nolabels -warn-error -a+8)
  (ocamlopt_flags :standard (:include flambda.flags))
  ;(inline_tests (backend qtest.lib) (libraries containers))
  (libraries seq))

(rule
  (targets OSeq_shims_.ml)
  (deps (file mkshims.ml))
  (action (with-stdout-to %{targets} (run ocaml ./mkshims.ml))))
